--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -56,15 +56,19 @@
         }
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.02); } 100% { transform: scale(1); } }
 
-        /* VIDEO */
+        /* VIDEO VERTICAL (SHORTS) */
         .video-box {
-            position: relative; width: 100%; aspect-ratio: 16/9;
-            background: #000; border: 1px solid #333; border-radius: 12px;
-            display: flex; align-items: center; justify-content: center; margin-bottom: 30px;
-            overflow: hidden; /* Garante que o vídeo não vase */
+            position: relative; 
+            /* Configuração para ficar em pé (9:16) e limitado a 350px de largura */
+            max-width: 350px; 
+            aspect-ratio: 9/16; 
+            margin: 0 auto 30px auto;
+            
+            background: #000; border: none; border-radius: 12px;
+            display: flex; align-items: center; justify-content: center;
+            overflow: hidden;
         }
-        .play-icon { font-size: 40px; color: var(--gold); }
-
+        
         /* CARROSSEL DE DEPOIMENTOS */
         .carousel-container { margin: 40px 0; }
         .carousel {
@@ -127,16 +131,16 @@
             <p class="sub-text" data-aos="fade-up">Saia da fábrica, conquiste o carro dos sonhos e tenha liberdade falando Japonês sem precisar decorar Kanji agora.</p>
         </header>
 
-        <div class="video-box" data-aos="zoom-in" style="padding:0; border:none; background:transparent;">
+        <div class="video-box" data-aos="zoom-in">
             <iframe 
                 width="100%" 
                 height="100%" 
-                src="https://www.youtube.com/embed/FUsOfzRAon0?rel=0&controls=1&modestbranding=1" 
+                src="https://www.youtube.com/embed/udF3IIDdacs?rel=0&controls=1&modestbranding=1" 
                 title="Vídeo de Vendas" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen 
-                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px; border: 1px solid #333;">
+                style="border-radius: 12px; border: 1px solid #333;">
             </iframe>
         </div>
 
