--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -46,7 +46,7 @@
         .gold-text { color: var(--gold); font-weight: bold; }
         .sub-text { color: var(--text-gray); line-height: 1.6; margin-bottom: 30px; font-size: 1rem; }
 
-        /* BOTÃO DOURADO */
+        /* BOTÃO DOURADO (Garante largura total e texto centralizado) */
         .btn-gold {
             background: var(--gold-gradient);
             color: #000; font-weight: 800; padding: 18px; border-radius: 50px;
@@ -135,7 +135,7 @@
             <iframe 
                 width="100%" 
                 height="100%" 
-                src="https://www.youtube.com/embed/DLH_wL5AShU?rel=0&controls=1&modestbranding=1" 
+                src="https://www.youtube.com/embed/rGEHoJd0DJg?rel=0&controls=1&modestbranding=1" 
                 title="Vídeo de Vendas" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
