--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -223,7 +223,7 @@
             
             <details>
                 <summary>Serve para iniciante?</summary>
-                <p>Sim! O método foi desenhado tanto para quem está no zero absoluto, quanto para quem já sabe o básico/intermediário. O conteúdo é progressivo e liberado semanalmente para você evoluir sem travar.</p>
+                <p>Sim! O método foi desenhado tanto para quem está no zero absoluto, quanto para quem já sabe o básico/intermediário. A estrutura é focada em prática, fazendo você <strong>progredir visivelmente a cada semana</strong> de estudo.</p>
             </details>
             
             <details>
