--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -60,7 +60,7 @@
         }
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.02); } 100% { transform: scale(1); } }
 
-        /* VIDEO VERTICAL */
+        /* VIDEO VERTICAL (PARA OS DOIS VÍDEOS) */
         .video-box {
             position: relative; max-width: 350px; aspect-ratio: 9/16; margin: 0 auto 30px auto;
             background: #000; border: none; border-radius: 12px;
@@ -236,6 +236,26 @@
                 <p>Após a confirmação do pagamento (seja via conta do correio ou cartão), você recebe o acesso à plataforma imediatamente no seu e-mail cadastrado.</p>
             </details>
         </div>
+
+        <section class="platform-video-section" style="margin-top: 60px; margin-bottom: 60px; text-align: center;" data-aos="fade-up">
+            <h2 class="gold-gradient-text" style="margin-bottom: 10px;">VEJA POR DENTRO</h2>
+            <p class="sub-text">Simples, direta e fácil de usar no celular.</p>
+            
+            <div class="video-box" data-aos="zoom-in">
+                <iframe 
+                    width="100%" 
+                    height="100%" 
+                    src="https://www.youtube.com/embed/U2cLNlUbF1c?rel=0&controls=1&modestbranding=1" 
+                    title="Tour pela Plataforma" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen 
+                    style="border-radius: 12px; border: 1px solid #333;">
+                </iframe>
+            </div>
+            
+            <a href="#oferta" class="btn-gold">QUERO COMEÇAR AGORA</a>
+        </section>
 
         <footer>
             <p>&copy; 2025 Romanizado Academy</p>
