--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -245,7 +245,7 @@
                 <iframe 
                     width="100%" 
                     height="100%" 
-                    src="https://www.youtube.com/embed/U2cLNlUbF1c?rel=0&controls=1&modestbranding=1" 
+                    src="https://www.youtube.com/embed/D-Emt15vXxw?rel=0&controls=1&modestbranding=1" 
                     title="Tour pela Plataforma" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
