Update links to WhatsApp in index.html

--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -8,6 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1057042062998950');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1057042062998950&ev=PageView&noscript=1"
+    /></noscript>
     <style>
         /* --- ESTILO GERAL DARK PREMIUM --- */
         :root {
@@ -151,7 +166,7 @@
         </div>
 
         <div data-aos="fade-up" class="text-center">
-            <a href="#oferta" class="btn-gold">QUERO ME PROTEGER</a>
+            <a href="https://wa.me/message/SVAHTS6GQVY2G1" class="btn-gold">QUERO ME PROTEGER</a>
             <p style="font-size:0.9rem; color:#888;">🔒 Acesso Imediato e Seguro</p>
         </div>
 
@@ -215,7 +230,7 @@
                 <li>✅ Aulas Curtas e Práticas</li>
             </ul>
 
-            <a href="LINK_DO_CHECKOUT" class="btn-gold" style="border:2px solid #000; box-shadow:none;">GARANTIR VAGA AGORA</a>
+            <a href="https://wa.me/message/SVAHTS6GQVY2G1" class="btn-gold" style="border:2px solid #000; box-shadow:none;">GARANTIR VAGA AGORA</a>
         </div>
 
         <div style="margin-top:50px;">
@@ -254,7 +269,7 @@
                 </iframe>
             </div>
             
-            <a href="#oferta" class="btn-gold">QUERO COMEÇAR AGORA</a>
+            <a href="https://wa.me/message/SVAHTS6GQVY2G1" class="btn-gold">QUERO COMEÇAR AGORA</a>
         </section>
 
         <footer>
