Update quiz questions and button options in HTML

--- a/japones/japones/index.html
+++ b/japones/japones/index.html
@@ -104,7 +104,7 @@
             align-items: center;
             background: var(--bg-body);
             padding: 20px 0;
-            opacity: 0; /* Começa invisível até clicar no Iniciar */
+            opacity: 0; 
             transition: opacity 0.5s ease;
         }
 
@@ -292,11 +292,10 @@
                 </video>
                 
                 <p style="color:var(--japan-red); font-size:0.85rem; margin-bottom:10px; text-transform:uppercase; letter-spacing:1px; font-weight:700;">Etapa 1 de 4</p>
-                <h2 class="quiz-question">Você ainda lembra por que veio ao Japão?</h2>
-                <p style="color:#666; font-size:0.95rem; margin-bottom:20px;">Seja sincero, qual era seu maior objetivo no início?</p>
+                <h2 class="quiz-question">Você concorda que quem não fala Japonês trabalha mais e ganha menos?</h2>
                 
-                <button class="quiz-btn" onclick="nextStep(2)"><span>A</span> Juntar dinheiro para realizar um sonho (Casa/Negócio).</button>
-                <button class="quiz-btn" onclick="nextStep(2)"><span>B</span> Dar uma vida melhor para minha família.</button>
+                <button class="quiz-btn" onclick="nextStep(2)"><span>A</span> Sim, e quero mudar isso.</button>
+                <button class="quiz-btn" onclick="nextStep(2)"><span>B</span> Não, estou satisfeito assim.</button>
             </div>
 
             <div class="quiz-step" id="step-2">
